--- a/WebContent/crm/dynamicData_cityprofit_analysis.html
+++ b/WebContent/crm/dynamicData_cityprofit_analysis.html
@@ -218,9 +218,12 @@
 	});
 	var cur_date = new Date();
 	var year_month = cur_date.getFullYear()+"-"+(cur_date.getMonth()+1);
+    cur_date.setTime(cur_date.getTime()-2*24*60*60*1000);
+    var last_month = cur_date.getMonth()+1;
+    var last_month_date = cur_date.getFullYear()+"-" + (last_month < 10 ? '0' + last_month : '' + last_month);
 	laydate.render({//月份控件
 		elem:'#be_date1',
-		value:new Date(),
+		value:last_month_date,
 		type:"month",
 		btns: ['confirm','now'],
 		theme: '#11214e',
@@ -543,7 +546,7 @@
 function resetSerachParam(){
     laydate.render({//月份控件
         elem:'#be_date1',
-        value:new Date(),
+        value:last_month_date,
         type:"month",
         btns: ['confirm','now'],
         theme: '#11214e',
