优惠券统计改为platform_price

--- a/WebContent/crm/dynamicData_storeprofit_analysis.html
+++ b/WebContent/crm/dynamicData_storeprofit_analysis.html
@@ -124,9 +124,8 @@
          	<div class="box-header h4 text-light-blue">
           	<div class="pull-left "><strong>门店毛利</strong></div>
          	<div class="pull-left text-red" style="padding-left:15px;font-size:75%">数据口径：</div>
-                <div class="pull-left text-red" style="font-size:75%">1.本月数据截止到昨天24点。</br>2.营销费用包含使用的优惠券和粮票。</br>3.毛利=销售收入（平台+优易）-已退货-营销费用-报损-盘亏。</div>
-          </div>
-          <div class="box-body">
+                <div class="pull-left text-red" style="font-size:75%">1.本月数据截止到昨天24点。</br>2.营销费用包含使用的优惠券和粮票。</br>3.毛利=销售收入（平台+优易）-已退货（已签收并退款）-营销费用（平台分摊的优惠券+粮票）-报损-盘亏。</div>
+          </div>       <div class="box-body">
             <form id="searchform">
             <div class="form-group col-lg-4">
               <label>查询时间</label>
