店长菜单订单档案放开

--- a/WebContent/crm/current_shopkeeper.html
+++ b/WebContent/crm/current_shopkeeper.html
@@ -201,8 +201,8 @@
                                             <dd style="position:relative"><a href="javascript:goToMemberDataStat()"><span class="fa fa-vimeo"></span>社员档案 </a>
                                                 <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
                                             <dd><a href="javascript:goToUserProfileStat()"><span class="fa fa-user"></span>用户档案</a></dd>
-                                            <!--<dd><a href="javascript:searchData()"><span class="fa fa-file-o"></span>订单档案</a></dd>-->
-                                            <dd class="logo-prohibit"><a href="javascript:js_alert_temporary()"><span class="fa fa-file-o"></span>订单档案</a></dd>
+                                            <dd><a href="javascript:searchData()"><span class="fa fa-file-o"></span>订单档案</a></dd>
+                                            <!--<dd class="logo-prohibit"><a href="javascript:js_alert_temporary()"><span class="fa fa-file-o"></span>订单档案</a></dd>-->
                                             <dd><a href="javascript:searchArea()"><span class="fa fa-copy"></span>片区档案</a></dd>
                                             <!-- <dd><a href="javascript:
 
