毛利统计列表添加已退货

--- a/WebContent/crm/dynamicData_deptprofit_analysis.html
+++ b/WebContent/crm/dynamicData_deptprofit_analysis.html
@@ -195,6 +195,7 @@
                           <th width="10%" id="channelnamepayhide">频道</th>
 	                      <th width="10%">销售收入<br/>（平台）</th>
                           <th width="10%">销售收入<br/>（优易）</th>
+                          <th width="12%">已退货<br/></th>
                           <th width="12%">营销费用<br/></th>
                           <th width="10%"><font id="columnattention" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
                               <font id="forcolumnattention" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:60px">销售收入-已退货-营销费用</font>毛利</th>
@@ -629,6 +630,7 @@
                        var real_profit = (jData[i].total_profit -jData[i].return_profit- jData[i].order_fee).toFixed(2);
                            infoStr = infoStr+"<td>"+jData[i].platform_profit+"</td>"
                            +"<td>"+jData[i].ims_profit+"</td>"
+                           +"<td>"+jData[i].return_profit+"</td>"
                            +"<td>"+jData[i].order_fee+"</td>"
                            +"<td>"+real_profit+"</td>"
                            +"</tr>";
