--- a/WebContent/crm/dynamicData_storeprofit_analysis.html
+++ b/WebContent/crm/dynamicData_storeprofit_analysis.html
@@ -171,6 +171,7 @@
 	                      <th width="10%">门店编号</th>
 	                      <th width="10%">销售收入<br/>（平台）</th>
                           <th width="10%">销售收入<br/>（优易）</th>
+                          <th width="10%">已退货<br/></th>
                           <th width="10%">营销费用<br/></th>
                           <th width="10%">报损<br/></th>
                           <th width="10%">盘亏<br/></th>
@@ -495,6 +496,7 @@
 		                       +"<td>"+jData[i].store_code+"</td>"
 		                       +"<td>"+jData[i].platform_profit+"</td>"
                                +"<td>"+jData[i].ims_profit+"</td>"
+                               +"<td>"+jData[i].return_profit+"</td>"
                                +"<td>"+jData[i].order_fee+"</td>"
                                +"<td>"+jData[i].baosun+"</td>"
                                +"<td>"+jData[i].pankui+"</td>"
