--- a/WebContent/crm/dynamicData_cityprofit_analysis.html
+++ b/WebContent/crm/dynamicData_cityprofit_analysis.html
@@ -163,6 +163,7 @@
 	                      <th width="8%">城市</th>
 	                      <th width="10%">销售收入<br/>（平台）</th>
                           <th width="10%">销售收入<br/>（优易）</th>
+                          <th width="12%">已退货<br/></th>
                           <th width="12%">营销费用<br/></th>
                           <th width="10%"><font id="columnattention" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
                               <font id="forcolumnattention" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:60px">销售收入-已退货-营销费用</font>毛利</th>
@@ -425,6 +426,7 @@
 		                       +"<td>"+jData[i].city_name+"</td>"
 		                       +"<td>"+jData[i].platform_profit+"</td>"
                                +"<td>"+jData[i].ims_profit+"</td>"
+                               +"<td>"+jData[i].return_profit+"</td>"
                                +"<td>"+jData[i].order_fee+"</td>"
                                +"<td>"+real_profit+"</td>"
 		                       +"</tr>";
