优易-进销存系统商品

--- a/WebContent/crm/dynamicData_deptprofit_analysis.html
+++ b/WebContent/crm/dynamicData_deptprofit_analysis.html
@@ -194,9 +194,9 @@
                           <th width="10%">事业群</th>
                           <th width="10%" id="channelnamepayhide">频道</th>
 	                      <th width="10%">销售收入<br/>（平台）</th>
-                          <th width="10%">销售收入<br/>（优易）</th>
-                          <th width="12%">已退货<br/></th>
-                          <th width="12%">营销费用<br/></th>
+                          <th width="13%">销售收入<br/>（优易-进销存系统商品）</th>
+                          <th width="10%">已退货<br/></th>
+                          <th width="10%">营销费用<br/></th>
                           <th width="10%"><font id="columnattention" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
                               <font id="forcolumnattention" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:60px">销售收入-已退货-营销费用</font>毛利</th>
 	                    </tr>
