--- a/WebContent/crm/dynamicData_storeprofit_analysis.html
+++ b/WebContent/crm/dynamicData_storeprofit_analysis.html
@@ -170,7 +170,7 @@
 	                      <th width="10%">门店名称</th>
 	                      <th width="10%">门店编号</th>
 	                      <th width="10%">销售收入<br/>（平台）</th>
-                          <th width="10%">销售收入<br/>（优易）</th>
+                          <th width="13%">销售收入<br/>（优易-进销存系统商品）</th>
                           <th width="10%">已退货<br/></th>
                           <th width="10%">营销费用<br/></th>
                           <th width="10%">报损<br/></th>
