--- a/WebContent/crm/dynamicData_cityprofit_analysis.html
+++ b/WebContent/crm/dynamicData_cityprofit_analysis.html
@@ -162,7 +162,7 @@
 	                    <tr>
 	                      <th width="8%">城市</th>
 	                      <th width="10%">销售收入<br/>（平台）</th>
-                          <th width="10%">销售收入<br/>（优易）</th>
+                          <th width="13%">销售收入<br/>（优易-进销存系统商品）</th>
                           <th width="12%">已退货<br/></th>
                           <th width="12%">营销费用<br/></th>
                           <th width="10%"><font id="columnattention" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
