订单档案平台优惠券

--- a/WebContent/crm/searchData_return_order.html
+++ b/WebContent/crm/searchData_return_order.html
@@ -1024,7 +1024,7 @@ Date.prototype.format=function(fmt) {
             },false);
         }
         var rebate="<strong>返利：</strong>"+rebate_org+"<br>";
-        var coupon="<strong>优惠券：</strong>"+coupon_org+"<br>";
+        var coupon="<strong>平台优惠券：</strong>"+coupon_org+"<br>";
         var cost="<strong>成本：</strong>"+cost_org+"<br>";
 
         var profitcontent = "无合同";
