--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -1492,7 +1492,7 @@ Date.prototype.format=function(fmt) {
 			        
 			        var profitid = "profittips"+i;
 
-                    var coupon="<strong>优惠券：</strong>"+jData[i].apportion_coupon+"<br>";
+                    var coupon="<strong>平台优惠券：</strong>"+jData[i].apportion_coupon+"<br>";
                     var rebate="<strong>粮票：</strong>"+jData[i].apportion_rebate+"<br>";
                     var feecontent =coupon+rebate+"@feetips"+i;
                     var feeid = "feetips"+i;
@@ -1783,7 +1783,7 @@ Date.prototype.format=function(fmt) {
           },false);
       }
       var rebate="<strong>返利：</strong>"+rebate_org+"<br>";
-      var coupon="<strong>优惠券：</strong>"+coupon_org+"<br>";
+      var coupon="<strong>平台优惠券：</strong>"+coupon_org+"<br>";
       var cost="<strong>成本：</strong>"+cost_org+"<br>";
 
       var profitcontent = "无合同";
