添加国安侠毛利

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -112,7 +112,8 @@
                                             <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>
                                         <dd class="col-sm-4"><a href="javascript:goToAreaGMVToSend()"><span class="fa fa-pie-chart"></span>国安侠GMV</a></dd>
                                         <dd class="col-sm-4"><a href="javascript:goToNewAddCustomerGMVToSend()"><span class="fa fa-bar-chart"></span>国安侠用户</a></dd>
-                                        <dd class="col-sm-4 logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-eur"></span>国安侠毛利</a></dd>
+                                        <dd class="col-sm-4" style="position:relative"><a href="javascript:goToGaxMaoli()"><span class="fa fa-eur"></span>国安侠毛利</a>
+                                            <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>
                                         <dd class="col-sm-4"><a href="javascript:goToDeptGMV()"><span class="fa fa-book"></span>事业群GMV</a></dd>
                                         <dd class="col-sm-4"><a href="javascript:goToDeptConsumer()"><span class="fa fa-female"></span>事业群用户</a></dd>
                                         <dd class="col-sm-4" style="position:relative"><a href="javascript:goToDeptprofit();"><span class="fa fa-gbp"></span>事业群毛利</a>
