修改毛利提示信息

--- a/WebContent/crm/dynamicData_gax_analysis.html
+++ b/WebContent/crm/dynamicData_gax_analysis.html
@@ -338,6 +338,12 @@
         $(".logo-lg > ul > li").hover(function(){
             $(this).children(".nav_dropdown").toggle('1000');
         });
+        $("#columnattention").on("mouseover",function(event){
+            $("#forcolumnattention").show();
+        });
+        $("#columnattention").on("mouseout",function(event){
+            $("#forcolumnattention").hide();
+        });
         //Date range picker
 //    $('#be_date1').daterangepicker();
     });
