--- a/WebContent/hr/dist_career_list.html
+++ b/WebContent/hr/dist_career_list.html
@@ -167,10 +167,10 @@
                                 <input id="name" name="name" type="text" style="width:50%" class="form-control" onkeyup="value=value.replace(/(\s*)|(\s*)/g,'').replace(/[ ]/g,'')"/>
                             </td>
                       		<td width="5%">
-                                	城市：				 	
+                                	事业群：				 	
                             </td> 
                             <td>
-                            	<input type="text" id="careernames" style="width:50%"  name="citynames" class="form-control" onkeyup="value=value.replace(/(\s*)|(\s*)/g,'').replace(/[ ]/g,'')" />
+                            	<input type="text" id="careernames" style="width:50%"  name="careernames" class="form-control" onkeyup="value=value.replace(/(\s*)|(\s*)/g,'').replace(/[ ]/g,'')" />
                             </td>
                             
                             
