添加城市、门店国安侠毛利访问权限

--- a/WebContent/crm/dynamicData_gax_analysis.html
+++ b/WebContent/crm/dynamicData_gax_analysis.html
@@ -504,6 +504,8 @@
                 employeeName:employeeName
             }
         }else  if(target==1){
+            var cityId = $("#city_id_customer").val();
+            var cityName = $("#city_name_customer").val();
             dynamicDto = {
                 beginDate:begin_end_date,
                 storeNumer:number_str,
@@ -638,6 +640,8 @@
                 employeeName:employeeName
             }
         }else if(target==1){
+            var cityId = $("#city_id_customer").val();
+            var cityName = $("#city_name_customer").val();
             dynamicDto = {
                 beginDate:begin_end_date,
                 storeNumer:number_str,
