--- a/WebContent/crm/current_shopkeeper.html
+++ b/WebContent/crm/current_shopkeeper.html
@@ -188,7 +188,7 @@
                                             <!--<img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>-->
                                             <dd class="col-sm-4"><a href="javascript:goToAreaGMVToSend()"><span class="fa fa-pie-chart"></span>国安侠GMV</a></dd>
                                             <dd class="col-sm-4"><a href="javascript:goToNewAddCustomerGMVToSend()"><span class="fa fa-bar-chart"></span>国安侠用户</a></dd>
-                                            <dd class="col-sm-4 logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-eur"></span>国安侠毛利</a></dd>
+                                            <dd class="col-sm-4 "><a href="javascript:goToGaxMaoli();"><span class="fa fa-eur"></span>国安侠毛利</a></dd>
                                             <dd class="col-sm-4"><a href="javascript:goToSendOrders()"><span class="fa fa-calendar-check-o"></span>国安侠送单量</a></dd>
                                             <!--<dd class="col-sm-6"><a href="javascript:goToRewardtimes()"><span class="fa fa-thumbs-o-up"></span>国安侠好评次数</a></dd>-->
                                             <dd class="col-sm-4" style="position: relative;"><a href="javascript:goToInvitationMember()"><span class="fa fa-credit-card"></span>社员邀请统计</a>
@@ -1811,6 +1811,11 @@
     //门店毛利
     function goToStoreprofit(){
         var url = "dynamicData_storeprofit_analysis.html?t="+encode64(2)+"&c=&cn="+encode64(currentStore.cityName)+"&s="+ encode64(STORE_ID)+"&so="+encode64(currentStore.storeno)+"&e="+encode64(EMPLOYEE_NO)+"&sn="+encode64(currentStore.name)+"&#fg";
+        window.open(url,"_blank");
+    }
+    //国安侠毛利
+    function goToGaxMaoli() {
+        var url = "dynamicData_gax_analysis.html?t="+encode64(2)+"&c=&cn="+encode64(currentStore.cityName)+"&s="+ encode64(STORE_ID)+"&so="+encode64(currentStore.storeno)+"&e="+encode64(EMPLOYEE_NO)+"&sn="+encode64(currentStore.name)+"&#fg";
         window.open(url,"_blank");
     }
     //送单量
