--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -211,6 +211,7 @@
 	                      <a id="tag_积分订单" onclick="orderTypeSelection('积分订单')" style="cursor:pointer;">积分订单</a>
                           <a id="tag_过账支付" onclick="orderTypeSelection('过账支付')" style="cursor:pointer;">过账支付</a>
                           <a id="tag_无精确成本" onclick="orderTypeSelection('无精确成本')" style="cursor:pointer;">无精确成本</a>
+                          <a id="tag_A类营销费用" onclick="orderTypeSelection('A类营销费用')" style="cursor:pointer;">A类营销费用</a>
 	                      <input type="text" style="display:none" class="form-control" placeholder="订单标签"  id="label_private_manual"/>
 	                    </div>
 	                  </div>
@@ -1589,6 +1590,10 @@ Date.prototype.format=function(fmt) {
                             infoStr= infoStr
                                 +"<span style=\"background:url('../data_access/imgmouse_files/20181101143808.png') no-repeat;background-size:100% 110%; display: inline-block;padding:5px 5px 5px 10px; color:#fff;\">过账支付</span>";
                         }
+                       if(jData[i].order_tag4!=''){
+                           infoStr= infoStr
+                               +"<span style=\"background:url('../data_access/imgmouse_files/20181107142651.png') no-repeat;background-size:100% 110%; display: inline-block;padding:5px 5px 5px 10px; color:#fff;\">A类营销费用</span>";
+                       }
 						infoStr= infoStr
 	                       	+"</td>"
 	                       	+"</tr>";
