--- a/WebContent/crm/searchData_return_order.html
+++ b/WebContent/crm/searchData_return_order.html
@@ -874,6 +874,10 @@ Date.prototype.format=function(fmt) {
 							infoStr= infoStr
 								+"<span style=\"background:url('../data_access/imgmouse_files/20180601180147.png') no-repeat;background-size:100% 110%; display: inline-block;padding:5px 5px 5px 10px; color:#fff;\">社员订单</span>";
 						}
+                        if(jData[i].order_tag4!=''){
+                           infoStr= infoStr
+                               +"<span style=\"background:url('../data_access/imgmouse_files/20181107142651.png') no-repeat;background-size:100% 110%; display: inline-block;padding:5px 5px 5px 10px; color:#fff;\">A类营销费用</span>";
+                        }
 						infoStr= infoStr
 	                       	+"</td>"
 	                       	+"</tr>";
