优化内测版标签

--- a/WebContent/crm/dynamicData_cityprofit_analysis.html
+++ b/WebContent/crm/dynamicData_cityprofit_analysis.html
@@ -258,7 +258,7 @@
         elem:'#be_date1',
         value:year_month,
         type:"month",
-        btns: ['confirm','now'],
+        btns: ['confirm'],
         theme: '#11214e',
         min: '2018-10-1',
         max:max_month,
@@ -581,7 +581,7 @@ function resetSerachParam(){
         elem:'#be_date1',
         value:year_month,
         type:"month",
-        btns: ['confirm','now'],
+        btns: ['confirm'],
         theme: '#11214e',
         min: '2018-10-1',
         max:max_month,
