--- a/WebContent/crm/dynamicData_deptprofit_analysis.html
+++ b/WebContent/crm/dynamicData_deptprofit_analysis.html
@@ -290,7 +290,7 @@
         elem:'#be_date1',
         value:year_month,
         type:"month",
-        btns: ['confirm','now'],
+        btns: ['confirm'],
         theme: '#11214e',
         min: '2018-10-1',
         max:max_month,
@@ -888,7 +888,7 @@ function resetSerachParam(){
         elem:'#be_date1',
         value:year_month,
         type:"month",
-        btns: ['confirm','now'],
+        btns: ['confirm'],
         theme: '#11214e',
         min: '2018-10-1',
         max:max_month,
