--- a/WebContent/crm/dynamicData_gax_analysis.html
+++ b/WebContent/crm/dynamicData_gax_analysis.html
@@ -305,7 +305,7 @@
         elem:'#be_date1',
         value:year_month,
         type:"month",
-        btns: ['confirm','now'],
+        btns: ['confirm'],
         theme: '#11214e',
         min: '2018-10-1',
         max:max_month,
@@ -701,7 +701,7 @@
             elem:'#be_date1',
             value:year_month,
             type:"month",
-            btns: ['confirm','now'],
+            btns: ['confirm'],
             theme: '#11214e',
             min: '2018-10-1',
             max:max_month,
