--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -2232,7 +2232,7 @@ function showfee(obj){
 //下载列表
 function download_table(){
 
-    doManager('treportFiledownManager','selectReportFileDowns',null,function(data){
+    doManager('treportFiledownManager','selectReportFileDowns',["DDDA"],function(data){
         if(data.result){
             var dataresult= JSON.parse(data.data);
             if(dataresult != undefined && dataresult != null && dataresult.length){
@@ -2545,14 +2545,27 @@ function DateDiff(Date1,Date2) { //Date1和Date2是2018-09-01格式
 
 //打开按钮"模态框"
 $(".dialog_open").click(function(){
-    var cityName = $("#citySelect  option:selected").text();
-    var sdate = $("#auto_date").val();
-    var storeName = $("#store_name_manual").val();
-    $("#city").text(cityName);
-    $("#store").text(storeName);
-    $("#date").text(sdate);
-    $("#userName").val("订单档案");
-    dialogOpen()
+    var total = $("#totalRecord_cannot").text();
+    parseInt("total");
+    if(total != ""){
+        var totals = parseInt(total);
+        if(totals <= 50000){
+            var cityName = $("#citySelect  option:selected").text();
+            var sdate = $("#auto_date").val();
+            var storeName = $("#store_name_manual").val();
+            $("#city").text(cityName);
+            $("#store").text(storeName);
+            $("#date").text(sdate);
+            $("#userName").val("商品销售档案");
+            dialogOpen()
+        }else{
+            crm_alert(0,"单次导出不能超过5万条记录，请调整搜索条件，确认结果条数后再试。");
+        }
+    }else{
+        crm_alert(0,"请先确认是否查询到数据！");
+    }
+
+
 });
 //确定按钮"模态框"
 $(".dialog_close").click(function(){
