修改订单档案页面显示

--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -2561,7 +2561,7 @@ $(".dialog_open").click(function(){
             $("#city").text(cityName);
             $("#store").text(storeName);
             $("#date").text(sdate);
-            $("#userName").val("商品销售档案");
+            $("#userName").val("订单档案");
             dialogOpen()
         }else{
             crm_alert(0,"单次导出不能超过5万条记录，请调整搜索条件，确认结果条数后再试。");
