下载中心页面显示

--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -329,7 +329,7 @@
               <div class="modal-content content2" id="dialog2">
                   <div>
                       <button type="button" class="close dialog_remove2 dialogremove">×</button>
-                      <h4 class="modal-title modeltitle">导出列表页面（暂留20条记录）</h4>
+                      <h4 class="modal-title modeltitle">下载文件列表（暂留20条记录）</h4>
                   </div>
                   <!--<div class="modal-body" style="padding-left: 0px;padding-right:0px;padding-top:0px;padding-bottom: 0px;">-->
                       <!--<div class="col-md-12 col-xs-12">-->
