--- a/WebContent/crm/searchDataItem_view.html
+++ b/WebContent/crm/searchDataItem_view.html
@@ -327,7 +327,7 @@
               <div class="modal-content content2" id="dialog2">
                   <div>
                       <button type="button" class="close dialog_remove2 dialogremove">×</button>
-                      <h4 class="modal-title modeltitle">导出列表页面（暂留20条记录）</h4>
+                      <h4 class="modal-title modeltitle">下载文件列表（暂留20条记录）</h4>
                   </div>
                   <div class="div1" id="head_tr">
 
